2003-10-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSServicesManager.m: Tidy last patch to match use of
	whitespace etc in GNUstep code.
	* Source/GSDisplayManager.m:
	(-getEventMatchingMask:beforeDate:inMode:dequeue:) fix incorrect
	termination ... should terminate when limit date has passed,
	irrespective of the state of any input sources.
	* Source/NSApplication.m: ([-runModalForWindow:]) wait for new events
	between calls to ([-runModalSession:])
	([-runModalSession:]) rewritten to handle multiple events, but only
	those events which are available ... ie don't wait for more.
	Requires latest base library from CVS to get modified/corrected
	runloop behavior.

2003-10-26 15:18  Alexander Malmberg <alexander@malmberg.org>
		  Matt Rice <ratmice@yahoo.com>

	* Source/NSFontManager.m (-availableFonts, -availableFontFamilies,
	availableMembersOfFontFamily:): Don't check delegate; always return
	all fonts.
	(-_includeFont:): Move...

	* Source/NSFontPanel.m (_includeFont:delegate:): Here.
	(-_familySelectionChanged:, reloadDefaultFontFamilies): Use that
	method to check with the delegate which fonts should be included in
	the font panel.
	(-_doPreview, -_fontForSelection:): Check that the face list isn't
	empty before accessing it.
	(-_getOriginalSize): Move to the Private category to match the
	@interface.

2003-10-25 16:52  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: initWithFrame is not supposed to be called
	on subclasses of NSControl as the designated initializer according to
	docs.  Removed the call.
	* Source/GSNibCompatibility.[hm]: Added in the old templates for 
	compatibility ONLY.  This is so any of the older .gorms which use 
	these templates can be loaded and used normally.
	* Source/NSOutlineView.m: Corrected a documentation issue.
	
2003-10-25 12:53  Matt Rice <ratmice@yahoo.com>

	* Source/NSWorkspace.m (-_connectApplication:): Ignore the path to
	the application when extracting the port name. (Committed by